@@ -1,3 +1,10 @@
+2020-12-06 Fred Kiefer <FredKiefer@gmx.de>
+
+	* Source/NSToolbarFrameworkPrivate.h,
+	* Source/GSToolbarView.m,
+	* Source/NSToolbar.m: Minor changes to format code, remove unused
+	methods and introduce some new helper methods.
+
 2020-11-29 Fred Kiefer <FredKiefer@gmx.de>
 
 	* Source/NSMenuView.m (-mouseDown:): Protect against _window going
